fix: Create Opening docs fixed
